tests/integration/fixtures/laugh/import/error/alias_이름_충돌/main.laugh
변수 math = 1;
가져오기 "math.laugh" 별칭 math;
